Next release
------------


0.2.2
------

- Ignore results without a dn instead of raising an error
- Escape special characters when querying for groups
- Do not cache invalid responses
- Added documentation on recursive group queries


0.2.1
------

- Use implicit binding and proper unbinding of connections.


0.2
---

- Made return values of pyramid_ldap3 compatible with pyramid_ldap.


0.1
---

-  Initial version