@@ -5,6 +5,7 @@ Next release
 0.2.2
 ------
 
+- Support server pools
 - Ignore results without a dn instead of raising an error
 - Escape special characters when querying for groups
 - Do not cache invalid responses
